--- a/Records_Manager/Records_Manager.csproj
+++ b/Records_Manager/Records_Manager.csproj
@@ -48,6 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="changeValue.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="changeValue.Designer.cs">
+      <DependentUpon>changeValue.cs</DependentUpon>
+    </Compile>
     <Compile Include="Existing Records.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +76,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Record.cs" />
     <Compile Include="Tags.cs" />
+    <EmbeddedResource Include="changeValue.resx">
+      <DependentUpon>changeValue.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Existing Records.resx">
       <DependentUpon>Existing Records.cs</DependentUpon>
     </EmbeddedResource>
