--- a/Records_Manager/Records_Manager.csproj
+++ b/Records_Manager/Records_Manager.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Record.cs" />
     <Compile Include="Search.cs" />
+    <Compile Include="Search_Filter.cs" />
     <Compile Include="Tags.cs" />
     <EmbeddedResource Include="changeValue.resx">
       <DependentUpon>changeValue.cs</DependentUpon>
