--- a/Records_Manager/Records_Manager.csproj
+++ b/Records_Manager/Records_Manager.csproj
@@ -38,6 +38,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -78,6 +79,12 @@
     <Compile Include="Record.cs" />
     <Compile Include="Search.cs" />
     <Compile Include="Search_Filter.cs" />
+    <Compile Include="Search_History.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Search_History.Designer.cs">
+      <DependentUpon>Search_History.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tags.cs" />
     <EmbeddedResource Include="changeValue.resx">
       <DependentUpon>changeValue.cs</DependentUpon>
@@ -101,6 +108,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Search_History.resx">
+      <DependentUpon>Search_History.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
