changed back pressing digit to alt+digit for switching tabs

--- a/Records_Manager/Records_Manager.csproj
+++ b/Records_Manager/Records_Manager.csproj
@@ -133,9 +133,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="System\Windows\Forms\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="icon.ico" />
   </ItemGroup>
